Create order page

--- a/src/styles/responsive/_index.scss
+++ b/src/styles/responsive/_index.scss
@@ -11,3 +11,4 @@
 @forward "./pagination-component-responsive";
 @forward "./dashboard-page-responsive";
 @forward "./users-list-page-responsive";
+@forward "./orders-list-page-responsive";
