Add in stock and product code fields to Add/Edit product pages

--- a/src/styles/components/_modal-window.scss
+++ b/src/styles/components/_modal-window.scss
@@ -60,7 +60,7 @@ section.modal {
     .modal__footer {
       padding: 20px;
       display: flex;
-      justify-content: end;
+      justify-content: flex-end;
       align-items: center;
       gap: 20px;
       border-top: 1px solid v.$primary-color;
