--- a/src/styles/components/_toolbar.scss
+++ b/src/styles/components/_toolbar.scss
@@ -32,7 +32,7 @@ section.toolbar__box {
 
   .wrap-filter-sort-box {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     align-items: center;
     gap: 20px;
 
